# portfolio-strategies

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKTEST_GUIDE.md  CONTRIBUTING.md  README.md  README_WEB.md  TESTING_STRUCTURE.md  flake.nix  pyproject.toml  pytest.ini  riskparity.py  run_tests.py  start-web.sh  strategies_to_implement.md  unified_backtest.py
backend/: __init__.py  main.py  requirements.txt  start.py  unified_backtest.py
core/: __init__.py  registry.py
core/config/: __init__.py  manager.py
core/interfaces/: __init__.py  strategy.py
core/market_data/: README.md  __init__.py  cache.py  config.yaml  example.py  fetcher.py  manager.py
docs/: ARCHITECTURE.md  ASSET_ANALYSIS.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx  test_trace.tsx
frontend/src/components/: LoadingSpinner.tsx  MarketDataTree.tsx  Navbar.tsx  TimeSeriesChart.tsx
frontend/src/pages/: Backtest.tsx  Dashboard.tsx  MarketData.tsx  Results.tsx  Strategies.tsx  UnifiedInterface.tsx
frontend/src/terminal/: ChartPane.tsx  LogsPane.tsx  Terminal.tsx  TerminalStore.tsx  WatchlistPane.tsx
frontend/src/terminal/panes/: CachePane.tsx  ChartControlsPane.tsx  ControlPane.tsx  DetailsPane.tsx  ResultsPane.tsx  StrategyDocumentationPane.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  ensureAgGridModules.ts
strategies/equity_convex_rate/: README.md  config.yaml  strategy.py
strategies/equity_convex_rate_hedge/: README.md  config.yaml  strategy.py
strategies/equity_crisis_alpha/: README.md  config.yaml  strategy.py
strategies/equity_inflation_beta/: README.md  config.yaml  strategy.py
strategies/equity_vol_barbell/: README.md  config.yaml  strategy.py
strategies/risk_parity/: README.md  config.yaml  strategy.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_equity_vol_barbell_functional.py  test_equity_vol_barbell_unit.py  test_integration.py
tests/fixtures/: __init__.py  data_fixtures.py  sample_data.py
tests/functional/: __init__.py  test_backtesting_simulation.py  test_config_integration.py  test_equity_vol_barbell.py  test_equity_vol_barbell_integration.py  test_risk_parity_functional.py  test_strategy_integration.py  test_strategy_workflow.py
tests/unit/: __init__.py  test_equity_crisis_alpha.py  test_equity_inflation_beta.py  test_equity_vol_barbell.py  test_market_data.py  test_risk_parity.py  test_strategy.py  test_weight_calculation.py
